# sendme

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install-sendme.ps1
.github/workflows/: ci.yml  release.yml
src/: collection.rs  get.rs  iroh_bytes_util.rs  main.rs  progress.rs  sendme_ticket.rs
tests/: cli.rs
ui/desktop/: package-lock.json  package.json
ui/desktop/src/: App.tsx  FileUpload.tsx  Receive.tsx  Send.tsx
ui/desktop/src-tauri/: Cargo.toml
ui/desktop/src-tauri/src/: main.rs
ui/ios/sendme/sendme/: AppError.swift  ContentView.swift  DocumentPicker.swift  ImageView.swift  Node.swift  ProgressBarView.swift  Receive.swift  Send.swift  ShareSheet.swift  sendmeApp.swift  util.swift
ui/ios/sendme/sendme.xcodeproj/: project.pbxproj
ui/ios/sendme/sendme.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ui/ios/sendme/sendme.xcodeproj/project.xcworkspace/xcuserdata/b5.xcuserdatad/: UserInterfaceState.xcuserstate
ui/ios/sendme/sendme.xcodeproj/xcuserdata/b5.xcuserdatad/xcschemes/: xcschememanagement.plist
ui/ios/sendme/sendmeTests/: sendmeTests.swift
ui/ios/sendme/sendmeUITests/: sendmeUITests.swift  sendmeUITestsLaunchTests.swift
