[package]
name = "sendme"
version = "0.15.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/dumb-pipe"
description = "A cli tool to send directories over the network, with NAT hole punching"


[dependencies]
anyhow = "1.0.75"
async-channel = "2.3.1"
base32 = "0.5.0"
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
futures-buffered = "0.2.4"
futures-lite = "2.3.0"
hex = "0.4.3"
indicatif = "0.17.7"
iroh-base = "0.24"
iroh-blobs = "0.24"
iroh-io = "0.6"
iroh-net = "0.24"
num_cpus = "1.16.0"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.4.0"

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8.5"
serde_json = "1.0.108"
tempfile = "3.8.1"
