[package]
name = "sendme"
version = "0.30.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/n0-computer/sendme"
description = "A cli tool to send directories over the network, with NAT hole punching"
readme = "README.md"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.81"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
derive_more = { version = "2.0.1", features = [
    "display",
    "from_str"
] }
# I had some issues with futures-buffered 0.2.9
futures-buffered = "0.2.11"
indicatif = "0.17.7"
iroh-blobs = { version = "0.97" }
iroh = "0.95"
num_cpus = "1.16.0"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.4.0"
data-encoding = "2.6.0"
n0-future = "0.3"
hex = "0.4.3"
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "osc52",
], optional = true }
irpc = "0.11.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Console"], optional = true }

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.9.2"
serde_json = "1.0.108"
tempfile = "3.8.1"

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
